# reclone_gui

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: USER_GUIDE.md
flatpak/: com.asithakanchana.reclone-gui.desktop  com.asithakanchana.reclone-gui.json  com.asithakanchana.reclone-gui.metainfo.xml  io.github.asithakanchana1.reclone_gui.desktop  io.github.asithakanchana1.reclone_gui.json  io.github.asithakanchana1.reclone_gui.metainfo.xml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  rclone_cmd.rs
src-tauri/src/models/: mod.rs  progress.rs  remote.rs
src-tauri/src/services/: mod.rs  rclone_service.rs
src/controllers/: useFileBrowser.ts  useRemoteDnD.ts  useRemotes.ts  useTransfers.ts
src/models/: types.ts
src/services/: eventBus.ts  rcloneApi.ts
src/views/components/: AboutDialog.tsx  FileBrowser.tsx  FileContextMenu.tsx  RemoteCard.tsx  RemoteWizard.tsx  Sidebar.tsx  SyncDialog.tsx  TransferOverlay.tsx  VirtualFileList.tsx
src/views/layouts/: AppLayout.tsx
src/views/pages/: DashboardPage.tsx
