[package]
name = "reclone-gui"
version = "0.1.0"
edition = "2021"
description = "A cross-platform GUI for rclone built with Tauri"
authors = ["Asitha Kanchana Palliyaguru"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
