[package]
name = "reclone-gui"
version = "0.2.0"
edition = "2021"
description = "A cross-platform GUI for rclone built with Tauri"
authors = ["Asitha Kanchana Palliyaguru"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
